reordered components and fixed some styling, but still not responsive

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -118,11 +118,10 @@ li > a
 
 pre,
 code
-  font-size: 15px
-  border: 1px solid $gray-light
+  font-size: 14px
+  //border: 1px solid $gray-light
   border-radius: 3px
-  background-color: #eef
-
+  background-color: whitesmoke
 
 code 
   padding: 1px 5px
